bug report - outstanding bugs are listed here:

 http://sourceforge.net/tracker/?atid=106663&group_id=6663&func=browse

(to file another bug see the 'submit bug' button on this page).

====================================================================

0.76: please submit patches for this section with actual code/doc
      patches!

* some BSD updates and fixes from Mark Murray - including a slightly
  more robust conversation function and some minimization of gcc
  warnings. (Bugs 449203,463984 - agmorgan)
* verified that the setcred stack didn't suffer from the bug I was
  nervous about, add a new module pam_debug to help me test this.
  fixed a libpam/pam_dispatch.c instrumentation line that I tripped
  over when testing. (Bug 424315 - agmorgan)
* pam_unix/support.c: sample use of reentrant NSS function.  Not yet active,
  because modules do not include _pam_aconf_h! (Bug 440107 - vorlon)
* doc/Makefile changes - use $(mandir) [courtesy Harald Welte] (Bug
  435760) and add some rules to make/delete the draft rfc I've been
  working on (Task 17426 - agmorgan)
* pam_modules.sgml: sourceforge has changed its CVS viewing software
  (Bug 460491 - agmorgan)
* pam_unix_passwd: got rid of an annoying warning (Bug 461089 - agmorgan)
* configure.in, _pam_aconf.h.in: set the stage for fully reentrant PAM
  modules, with some infrastructure to detect getxxbyxx_r() functions
  (Bug 440107 - vorlon)
* pam_unix: removed superfluous use of static variables in md5 and bigcrypt
  routines, bringing us a step closer to thread-safeness.  Eliminated
  some variable indirection along the way.  (Bug 440107 - vorlon)
* pam_tally: remove #include of stdlib.h, which isn't needed by anything
  found in this module.  Can be readded if we find a real need for it at
  a later date. (Bug 436432 - vorlon)
* pam_tally: added an #include (was it really needed?) and made the
  pam_tally app install (with more pretty printing and a corrected